--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 anyhow = "1.0.100"
 clap = { version = "4.5.51", features = ["derive"] }
 futures = "0.3.31"
+indicatif = "0.18.3"
 thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["full"] }
